Add missing section examples and elaborations

--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
         <script src="src/10_enhanced-object-literals.js"></script>
         <script src="src/11_default-function-arguments.js"></script>
         <script src="src/12_rest-and-spread-operators.js"></script>
+        <script src="src/13_destructuring.js"></script>
+        <script src="src/14_a_classes-the-old-way.js"></script>
+        <script src="src/14_b_classes-the-es6-way.js"></script>
+        <script src="src/15_generators.js"></script>
+        <script src="src/16_promises-and-fetch.js"></script>
     </body>
 </html>
